--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Pagina principal</h1>
+    <img src="img/iron.jpg">
     <p>Esta es la primera version de la web de la pagina de Kalos</p>
     <div>
         <h2>Empezxamos por una pequeña reseña</h2>
