Nuevo cambio en experimento

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="img/iron.jpg" width="200">
     <p>Esta es la primera version de la web de la pagina de Kalos</p>
     <div>
-        <h2>Empezxamos por una pequeña reseña</h2>
+        <h2>Empezxamos por una pequeña reseña historica</h2>
     </div>
 </body>
 </html>
