--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Pagina principal</h1>
     <p>Esta es la primera version de la web de la pagina de Kalos</p>
     <div>
-        <h2>Empezxamos por una pequeña reseña</h2>
+        <h2>Empezxamos por una pequeña reseña bibliografica</h2>
     </div>
 </body>
 </html>
