--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/estilos.css"/>
-    <title>Kalo´s Restobar el mejor restaurante</title>
+    <title>Kalo´s Restobar el mejor restaurante  2.0</title>
 </head>
 <body>
     <h1>Pagina principal</h1>
