Inicio del proyecto

--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/estilos.css"/>
-    <title>Kalos Restobar</title>
-</head>
-<body>
-    <h1>Pagina principal</h1>
-    <img src="img/iron.jpg" width="200">
-    <p>Esta es la primera version de la web de la pagina de Kalos</p>
-    <div>
-        <h2>Empezxamos por una pequeña reseña historica</h2>
-    </div>
-</body>
+<html>
+  <head>
+    <title>Bienvenidos a mi Portafolio</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ol>
+            <li>
+              <a>Portafolio</a>
+            </li>
+            <li>
+              <a>Experiencia</a>
+            </li>
+            <li>
+              <a>Trabajemos Juntos/a>
+            </li>
+        </ol>
+      </nav>
+    </header>
+    <section>seciion principal</section>
+    <section>seciion portafolio</section>
+    <section>seciion eventos</section>
+    <section>seciion contactos</section>
+    <footer>footer</footer>
+  </body>
 </html>
